--- a/富达基金.md
+++ b/富达基金.md
@@ -1,7 +1,15 @@
 # 富达基金
-
+公募产品(养老目标产品占60%)、权益类产品、固定收益类产品
 ## 基金类型——共同式(开放型/封闭型)、指数基金、对冲基金、组合基金(FOF/MOM)
+
+
 ## 资产类型——股票、混合、债券、货币、另类、房地产
+### 权益类产品
+权益类产品主要投资特定风格股票，如，大、中、小市值以及成长与价值风格等
+### 固定收益类产品
+固定收益类产品中，投资级和非投资级公司债合计占比超过60%。
+### 货币类产品
+### 混合型产品
 ## 投资区域
-## Alpha，超额收益
-## 信息比率
+## 基金经理模式
+# 每一项都要研究资金流入占净资产的比重
